# nix-search

./: .gitignore  README.md  flake.nix  meson.build  package.json  pnpm-lock.yaml  tsconfig.json
data/: dbus.in.service  desktop.in.desktop  gschema.in.xml  search-provider.in.ini
src/: App.ts  AppWindow.tsx  PrefWindow.tsx  SearchProvider.ts  env.d.ts  main.ts  nix.ts  settings.ts
